--- a/mydjango/intra/templates/intra/base.html
+++ b/mydjango/intra/templates/intra/base.html
@@ -2,7 +2,9 @@
 
 <html>
     <head>
+        {% block title %}
         <title>Merguez Auto Ecole</title>
+        {% endblock %}
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
